add API for popular search
