# src/api/popular-searches/routes/popular-search.ts
@@ -1,0 +1,12 @@
+export default {
+  routes: [
+    {
+      method: 'GET',
+      path: '/search/popular',
+      handler: 'popular-search.popularSearches',
+      config: {
+        auth: false,
+      },
+    },
+  ],
+};
